<resources>
    <string name="app_name">Video Studio</string>
    <string name="cancel">取消</string>

    <!-- Home -->
    <string name="tab_label_home">视频</string>
    <string name="tab_label_find">发现</string>
    <string name="tab_label_person">我的</string>

    <string name="tab_label_play_details">简介</string>
    <string name="tab_label_play_comment">评论</string>

    <!-- Person -->
    <string name="person_please_sign_in">请登录</string>
    <string name="person_attention">关注</string>
    <string name="person_look">看单</string>
    <string name="person_upload">上传</string>
    <string name="person_card">卡券</string>
    <string name="person_sign_get_welfare">签到领福利</string>
    <string name="person_vip">VIP会员</string>
    <string name="person_vip_join">【开通会员】首月5元/月</string>
    <string name="person_history">历史记录</string>
    <string name="person_see_more">查看更多</string>
    <string name="person_cache">我的缓存</string>
    <string name="person_service">个人服务</string>
    <string name="person_service_item_orchard">果园大作战</string>
    <string name="person_service_item_channel">我的频道</string>
    <string name="person_service_item_integral">我的积分</string>
    <string name="person_service_item_order">我的订单</string>
    <string name="person_service_item_theme">主题换肤</string>
    <string name="person_service_item_customer_service">我的客服</string>
    <string name="person_service_item_free_flow">免流量专区</string>
    <string name="person_service_item_more">更多</string>

    <!-- Photo -->
    <string name="portrait_change_by_photo">从相册选择图片</string>
    <string name="portrait_change_by_camera">拍照</string>

    <!-- RefreshLayout -->
    <string name="loading">正在加载数据</string>
    <string name="load_data_empty">暂无数据</string>
    <string name="load_data_fail">加载失败，点击重试</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="login_username_hint">用户名/手机号码/邮箱</string>
    <string name="login_sms_verification_code">短信验证码登录</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_register">注册帐号</string>
    <string name="login_forget_password">忘记密码</string>
    <!-- Register -->
    <string name="register_country">国家/地区</string>
    <string name="register_country_china">中国 +86</string>
    <string name="register">注册</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_password_hint">至少8个字符，不能包含空格；字母、数字、符号至少包含2种。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
