<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:context=".ui.activity.LoginActivity">

        <include
                android:id="@+id/include"
                layout="@layout/include_title"/>

        <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:src="@mipmap/ic_launcher"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                android:text="@string/app_name"/>

        <EditText
                android:id="@+id/etUserName"
                style="@style/RegisterEditTextTheme"
                android:inputType="textImeMultiLine"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etPassWord"
                android:hint="@string/login_username_hint"/>

        <EditText
                android:id="@+id/etPassWord"
                style="@style/RegisterEditTextTheme"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/register_password"/>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/login_sms_verification_code"
                    android:textColor="@color/color_login_blue"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/login_remember_password"/>
        </FrameLayout>

        <TextView
                android:id="@+id/tvLogin"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:background="@color/colorAccent"/>

        <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/login_register"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/login_forget_password"/>

    </LinearLayout>

</layout>