<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        app:startDestination="@id/home_tab_fragment">

    <fragment android:id="@+id/home_tab_fragment"
              android:name="org.elephant.video.ui.fragment.HomeTabFragment"
              android:label="@string/tab_label_home"
              tools:layout="@layout/fragment_tab_home">

        <!--<action android:id="@+id/action_main_video_fragment_to_class_video_fragment"-->
        <!--app:destination="@id/class_video"/>-->

    </fragment>

    <fragment android:id="@+id/find_tab_fragment"
              android:name="org.elephant.video.ui.fragment.FindTabFragment"
              android:label="@string/tab_label_find"
              tools:layout="@layout/fragment_tab_find"/>

    <fragment android:name="org.elephant.video.ui.fragment.PersonTabFragment"
              android:id="@+id/person_tag_fragment"
              android:label="@string/tab_label_person"
              tools:layout="@layout/fragment_tab_person"/>

</navigation>