<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.registerActivity">

        <include
                android:id="@+id/include"
                layout="@layout/include_title"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_country"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/include"/>

        <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_country_china"
                android:paddingRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/include"/>

        <EditText
                android:id="@+id/etUserName"
                style="@style/RegisterEditTextTheme"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/register_username"
                android:inputType="textImeMultiLine"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCountry"/>

        <EditText
                android:id="@+id/etEmail"
                style="@style/RegisterEditTextTheme"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:nextClusterForward="@id/etPassWord"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUserName"/>

        <EditText
                android:id="@+id/etPassWord"
                style="@style/RegisterEditTextTheme"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etConfirmPassWord"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail"/>

        <EditText
                android:id="@+id/etConfirmPassWord"
                style="@style/RegisterEditTextTheme"
                android:hint="@string/register_confirm_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassWord"/>

        <TextView
                android:id="@+id/etPassWordHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_password_hint"
                android:paddingTop="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassWord"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_50"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/etPassWordHint"/>

    </android.support.constraint.ConstraintLayout>
</layout>