<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="@dimen/dp_10"
             android:paddingBottom="@dimen/dp_10">

    <TableRow>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_a"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_orchard"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_b"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_channel"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_c"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_integral"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_d"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_order"
                    android:textSize="@dimen/sp_12"/>

        </LinearLayout>
    </TableRow>

    <Space android:layout_width="match_parent"
           android:layout_height="@dimen/dp_10"/>

    <TableRow>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_e"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_theme"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_f"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_customer_service"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_g"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_free_flow"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_live_favor_anim_h"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_service_item_more"
                    android:textSize="@dimen/sp_12"/>
        </LinearLayout>

    </TableRow>

</TableLayout>